--- a/css/products.css
+++ b/css/products.css
@@ -158,6 +158,7 @@ textarea:focus, input:focus{
     text-align: center;
     font-family: calibri;
     font-weight: bold;
+    text-shadow: 0 0 3px #4F4F4F;
     color:white;
 }
 
