adding some pages

--- a/css/login.css
+++ b/css/login.css
@@ -149,6 +149,10 @@ textarea:focus, input:focus, button:focus{
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
+.form-login button:hover{
+    background-color: rgb(202, 28, 74);
+}
+
 .form-input{
     
     width: 250px;
